<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:id="@+id/order_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            app:cardCornerRadius="8dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingBottom="10dp"
                android:paddingTop="5dp">

                <RelativeLayout
                    android:id="@+id/all_order_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp">
                    <TextView
                        android:layout_toLeftOf="@+id/all_order"
                        android:layout_toStartOf="@+id/all_order"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:text="@string/my_order"
                        android:textSize="13sp"
                        android:textColor="#000000"/>

                    <TextView
                        android:id="@+id/all_order"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:drawableEnd="@drawable/ic_chevron"
                        android:drawableRight="@drawable/ic_chevron"
                        android:text="@string/all_order"
                        android:textSize="12sp"/>
                </RelativeLayout>


                <LinearLayout
                    android:id="@+id/cut_off_rule"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_below="@id/all_order_layout"
                    android:layout_marginTop="5dp"
                    android:background="#bcbcbc"
                    android:orientation="horizontal" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/cut_off_rule"
                    android:layout_marginTop="10dp"
                    android:baselineAligned="false">

                    <RelativeLayout
                        android:id="@+id/already_order"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">

                        <ImageView
                            android:id="@+id/order_img"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:layout_gravity="center_horizontal"
                            android:contentDescription="@string/order_script"
                            android:src="@drawable/ic_order" />

                        <TextView
                            android:id="@+id/order_number_text"
                            android:layout_width="12dp"
                            android:layout_height="12dp"
                            android:layout_alignRight="@id/order_img"
                            android:background="@drawable/ic_number_bg"
                            android:gravity="center"
                            android:text="@string/number"
                            android:textColor="#FFFFFF"
                            android:textSize="8sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/order_img"
                            android:layout_centerHorizontal="true"
                            android:layout_gravity="center_horizontal"
                            android:text="@string/order"
                            android:textSize="10sp"/>
                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/wait_live"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">

                        <ImageView
                            android:id="@+id/wait_live_img"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:layout_gravity="center_horizontal"
                            android:contentDescription="@string/wait_live_script"
                            android:src="@drawable/ic_wait_living" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/wait_live_img"
                            android:layout_centerHorizontal="true"
                            android:layout_gravity="center_horizontal"
                            android:text="@string/wait_live"
                            android:textSize="10sp"/>

                        <TextView
                            android:id="@+id/wait_number_text"
                            android:layout_width="12dp"
                            android:layout_height="12dp"
                            android:background="@drawable/ic_number_bg"
                            android:gravity="center"
                            android:text="@string/number"
                            android:textColor="#FFFFFF"
                            android:textSize="8sp"
                            android:layout_alignRight="@id/wait_live_img"/>
                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/living"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/living_img"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:layout_gravity="center_horizontal"
                            android:contentDescription="@string/living_script"
                            android:src="@drawable/ic_living" />

                        <TextView
                            android:id="@+id/living_number_text"
                            android:layout_width="12dp"
                            android:layout_height="12dp"
                            android:layout_alignRight="@id/living_img"
                            android:background="@drawable/ic_number_bg"
                            android:gravity="center"
                            android:text="@string/number"
                            android:textColor="#FFFFFF"
                            android:textSize="8sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/living_img"
                            android:layout_centerHorizontal="true"
                            android:layout_gravity="center_horizontal"
                            android:text="@string/living"
                            android:textSize="10sp"/>
                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/in_transit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/in_transit_img"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:contentDescription="@string/transit_script"
                            android:src="@drawable/ic_in_transit" />

                        <TextView
                            android:id="@+id/transit_number_text"
                            android:layout_width="12dp"
                            android:layout_height="12dp"
                            android:layout_alignRight="@id/in_transit_img"
                            android:background="@drawable/ic_number_bg"
                            android:gravity="center"
                            android:text="@string/number"
                            android:textColor="#FFFFFF"
                            android:textSize="8sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/in_transit_img"
                            android:layout_centerHorizontal="true"
                            android:layout_gravity="center_horizontal"
                            android:text="@string/transit"
                            android:textSize="10sp"/>
                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/wait_send_comments"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/write_img"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:layout_gravity="center_horizontal"
                            android:contentDescription="@string/write_script"
                            android:src="@drawable/ic_write" />

                        <TextView
                            android:id="@+id/write_number_text"
                            android:layout_width="12dp"
                            android:layout_height="12dp"
                            android:layout_alignRight="@id/write_img"
                            android:background="@drawable/ic_number_bg"
                            android:gravity="center"
                            android:text="@string/number"
                            android:textColor="#FFFFFF"
                            android:textSize="8sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/write_img"
                            android:layout_centerHorizontal="true"
                            android:layout_gravity="center_horizontal"
                            android:text="@string/write"
                            android:textSize="10sp"/>
                    </RelativeLayout>
                </LinearLayout>
            </RelativeLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            app:cardCornerRadius="8dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp">

                <TextView
                    android:id="@+id/all_tool"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/my_tool"
                    android:textSize="13sp"
                    android:textColor="#000000"
                    android:layout_margin="5dp"/>

                <LinearLayout
                    android:id="@+id/cut_off_rule_tool"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_below="@id/all_tool"
                    android:layout_marginTop="5dp"
                    android:background="#bcbcbc"
                    android:orientation="horizontal" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/tool_recycler"
                    android:layout_below="@id/cut_off_rule_tool"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_alignLeft="@+id/all_tool"
                    android:layout_alignStart="@+id/all_tool" />

            </RelativeLayout>
        </android.support.v7.widget.CardView>

    </LinearLayout>
</LinearLayout>
